--- a/css/styles.css
+++ b/css/styles.css
@@ -1361,3 +1361,46 @@ padding: 7px 0 0;
 .btn:hover {
     background-color: #0056b3;
 }
+/* Styling for the text box */
+.slide-text {
+    padding: 20px;
+    border-radius: 10px;
+	position: absolute;
+    bottom: 40%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    border-radius: 0px;
+    background-color: rgba(0, 0, 0, 0.5); /* Transparent black background */
+    border: 2px solid white; /* White border */
+    text-align: center;
+    width: 80%; /* Make the box cover a large portion of the slide */
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+	width: 100%; /* Make the box cover the full width of the page */
+    max-width: 100vw; /* Ensur*/
+	border-left: 0; /* Remove the left border */
+    border-right: 0;
+}
+
+/* Larger text styling */
+.slide-text h1 {
+    font-size: 100px;
+    margin: 0;
+    font-weight: bold;
+    line-height: 1.2
+	font-size: 4rem;
+}
+
+/* Smaller text styling */
+.slide-text h3 {
+    font-size: 50px; /* Smaller font size for the full name */
+    margin: 10px 0 0;
+    font-weight: normal;
+	font-weight: bold;
+    opacity: 0.8
+	
+	font-size: 1.5rem;
+}
