--- a/css/styles.css
+++ b/css/styles.css
@@ -656,10 +656,14 @@ color:#fff;
   padding: 0;  
 }
 #our-team .team-member .team-img {
+	padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
   margin: 0;
   border-radius: 40px;
   overflow: hidden;
-  border: 5px solid #712a42;
+  
     height: 300px; /* Set the desired height */
     object-fit: cover; /* Ensures the image covers the entire container without distortion */
     width: 100%; /* Ensures the width fills the container */
@@ -668,10 +672,11 @@ color:#fff;
 	display: flex;
 }
 #our-team .team-member .team-info { 
-  background: #FFFFFF;
-  color: #3A3A3A;
-  padding: 7px 0;
-  border-top: 2px solid #fff;
+	padding: 0;
+    margin: 0;
+    border: none;
+    background: none
+  
 } 
 #our-team .team-member:hover .social-icons > li > a {
   color: #60E1BF;
