--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,26 @@ box-shadow: 0px 1px 2px rgba(40, 40, 40, 0.6);
   padding-bottom: 32px;
   border-top: 4px solid transparent;
  }
+@media only screen and (max-width: 767px) {
+  #main-nav.navbar-default {
+    /* Your styles for mobile view */
+  }
+  #main-nav.navbar-default .navbar-nav > li > a {
+    /* Your styles for mobile view */
+  }
+  .navbar-default .navbar-nav > li > a {
+    color: #b6afac;
+  }
+  #main-nav.navbar-default .navbar-nav > li.active > a,
+  #main-nav.navbar-default .navbar-nav > li.open > a,
+  #main-nav.navbar-default .navbar-nav > li:hover > a {
+    background: #b6afac;
+	  color: #59778b;
+  
+    border-top: 4px solid #b6afac;
+  }
+}
+
 
 @media only screen and (min-width: 768px) {
   #main-nav.navbar-default { 
