--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ color: #59778b;
   margin-bottom: 0;
 }
 .navbar.navbar-default .navbar-toggle {
-  margin-top: 32px;
+  margin-top: 10px;
 }
 .navbar.navbar-default .navbar-brand {
   height: auto;
@@ -213,13 +213,15 @@ box-shadow: 0px 1px 2px rgba(40, 40, 40, 0.6);
    padding-top: 32px;
   padding-bottom: 32px;
   border-top: 4px solid transparent;
+	 
  }
 @media only screen and (max-width: 767px) {
   #main-nav.navbar-default {
     /* Your styles for mobile view */
   }
   #main-nav.navbar-default .navbar-nav > li > a {
-    /* Your styles for mobile view */
+   padding-top: 15px; 
+	  padding-bottom: 15px;
   }
   .navbar-default .navbar-nav > li > a {
     color: #b6afac;
